--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             for file in target/debug/*; do
               if [[ -f $file && -x $file && ! $file =~ compile_fail ]]; then
                 mkdir -p "target/cov/$(basename $file)";
-                kcov --exclude-pattern=/usr/local/cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
+                sudo $HOME/.local/bin/kcov --exclude-pattern=/usr/local/cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
               fi
             done
             kcov --coveralls-id=$COVERALLS_REPO_TOKEN --merge target/cov target/cov/*
